      no segment prefix was created; see string8.asm.
   -  comment behind MACRO directive was appended to all lines inside the macro;
      see lst2.asm.
   -  jwasmr.exe: memory corruption may have caused a system crash if pass one
      ended with an error.
   -  some errors occured in LP64 systems (linux, unix) because LONG_MAX and
      LONG_MIN were used inadequately.

   Other changes:
   -  jfc.asm translated to jfc.c so it can be used in both 32- and 64-bit 
      systems.
   -  added runtest.sh, clrdir.sh and compress.sh to allow regression test in
      unix systems. A few tests are skipped, since jwasmr.exe and MS link.exe
      won't run in those systems.

   03/14/2020, v2.13:

   Bugfixes:
   -  regression in v2.12: option -bin didn't work if binary started with
      ORG != 0 ( i.e. DOS COM file format ); see bintest2.asm.
   -  option -mz,-bin: invalid binary was written if a .bss or .stack segment
      was followed by a segment with initialized data; see mz2.asm.
   -  options -mz,-bin,-omf: a segment override may have caused a group 
      association to be ignored; see fixup5.asm.
   -  options -mz,-bin: simplified segment directives now generate an assume
      for CS that refers to the group (if the segment is in a group).
      This solves some fixup problems; see fixup5a.asm.
   -  INVOKE directive, 64-bit: if the calling convention wasn't win64 
      (=fastcall), an address argument was translated to a "push offset <arg>",
      which didn't work in 64-bit code; see invok64c.asm.
   -  option -pe: if a DOS stub was added in the source (section .hdr$1), it
      got the wrong segtype, resulting in an invalid binary; see pe4.asm.
   -  stack offsets may have caused an error in 64-bit mode or a warning in
      the other modes if an overflow occured; see stkdisp1.asm.
   -  option -pe,-bin: relative fixups weren't handled correctly in all cases;
      was relevant for 64-bit only; see pe5.asm.