@@ -14,7 +14,7 @@ ifndef DEBUG
 DEBUG=0
 endif
 
-inc_dirs  = -IH
+inc_dirs  = -Isrc/H
 
 #cflags stuff
 
@@ -38,7 +38,7 @@ c_flags = -D__NT__ $(extra_c_flags)
 
 CC=clang.exe -c $(inc_dirs) $(c_flags)
 
-$(OUTD)/%.o: %.c
+$(OUTD)/%.o: src/%.c
 	$(CC) -o $(OUTD)/$*.o $<
 
 include gccmod.inc
@@ -51,17 +51,17 @@ $(OUTD):
 	mkdir $(OUTD)
 
 $(OUTD)/$(name).exe : $(OUTD)/main.o $(proj_obj)
-	$(CC) $(OUTD)/main.o $(proj_obj) -s -o $(OUTD)/$(name).exe -Wl,-Map,$(OUTD)/$(name).map
+	clang.exe $(OUTD)/main.o $(proj_obj) -s -o $(OUTD)/$(name).exe -Wl,-Map,$(OUTD)/$(name).map
 
-$(OUTD)/msgtext.o: msgtext.c H/msgdef.h
-	$(CC) -o $(OUTD)/msgtext.o msgtext.c
+$(OUTD)/msgtext.o: src/msgtext.c src/H/msgdef.h
+	$(CC) -o $(OUTD)/msgtext.o src/msgtext.c
 
-$(OUTD)/reswords.o: reswords.c H/instruct.h H/special.h H/directve.h
-	$(CC) -o $(OUTD)/reswords.o reswords.c
+$(OUTD)/reswords.o: src/reswords.c src/H/instruct.h src/H/special.h src/H/directve.h
+	$(CC) -o $(OUTD)/reswords.o src/reswords.c
 
 ######
 
 clean:
 	@rm $(OUTD)/*.exe
-	@rm $(OUTD)/*.o
+	@rm $(OUTD)/*.obj
 	@rm $(OUTD)/*.map
