@@ -8,23 +8,23 @@ ifndef DEBUG
 DEBUG=0
 endif
 
-inc_dirs  = -IH
+inc_dirs  = -Isrc/H
 
 #cflags stuff
 
 ifeq ($(DEBUG),1)
 extra_c_flags = -DDEBUG_OUT -g
-OUTD=DJGPPd
+OUTD=build\DJGPPd
 else
 extra_c_flags = -DNDEBUG -O2
-OUTD=DJGPPr
+OUTD=build\DJGPPr
 endif
 
 c_flags = $(extra_c_flags)
 
 CC=gcc.exe -c $(inc_dirs) $(c_flags)
 
-$(OUTD)/%.o: %.c
+$(OUTD)/%.o: src/%.c
 	$(CC) -o $(OUTD)/$*.o $<
 
 include gccmod.inc
@@ -39,11 +39,11 @@ $(OUTD):
 $(OUTD)/$(name).exe : $(OUTD)/main.o $(proj_obj)
 	gcc.exe $(OUTD)/main.o $(proj_obj) -s -o $(OUTD)/$(name).exe -Wl,-Map,$(OUTD)/$(name).map
 
-$(OUTD)/msgtext.o: msgtext.c H/msgdef.h H/globals.h
-	$(CC) -o $(OUTD)/msgtext.o msgtext.c
+$(OUTD)/msgtext.o: src/msgtext.c src/H/msgdef.h src/H/globals.h
+	$(CC) -o $(OUTD)/msgtext.o src/msgtext.c
 
-$(OUTD)/reswords.o: reswords.c H/instruct.h H/special.h H/directve.h
-	$(CC) -o $(OUTD)/reswords.o reswords.c
+$(OUTD)/reswords.o: src/reswords.c src/H/instruct.h src/H/special.h src/H/directve.h
+	$(CC) -o $(OUTD)/reswords.o src/reswords.c
 
 ######
 
