@@ -7,7 +7,7 @@
 # - hhc.exe, from MS Html-Help Workshop
 
 OUTD=Win32
-hc_hh = "\tools\html_help_workshop\hhc.exe"
+hc_hh = "\HTMLHelp\hhc.exe"
 
 .EXTENSIONS: .chm .chi
 
@@ -19,7 +19,7 @@ $(OUTD)\JWasm.chm $(OUTD)\JWasm.chi : $(OUTD)\Jwasm.hhc $(OUTD)\Jwasm.hhk $(OUTD
 $(OUTD)\JWasm.hhc $(OUTD)\JWasm.hhk $(OUTD)\JWasm.hhp: Manual.html Manual.mix
 	@if not exist $(OUTD) mkdir $(OUTD)
 	..\Tools\awk -f splithtm.awk -v dir=$(OUTD) Manual.html
-	..\Tools\awk -f makehhc.awk Manual.html >$(OUTD)/JWasm.hhc
-	..\Tools\awk -f makehhk.awk Manual.mix >$(OUTD)/JWasm.hhk
-	..\Tools\awk -f makehhp.awk -v hhcfile=JWasm.hhc -v hhkfile=JWasm.hhk Manual.html >$(OUTD)/JWasm.hhp
+	..\Tools\awk -f makehhc.awk Manual.html >$(OUTD)\JWasm.hhc
+	..\Tools\awk -f makehhk.awk Manual.mix >$(OUTD)\JWasm.hhk
+	..\Tools\awk -f makehhp.awk -v hhcfile=JWasm.hhc -v hhkfile=JWasm.hhk Manual.html >$(OUTD)\JWasm.hhp
 
